# atlas_io

./: Cargo.toml
atlas-client/: Cargo.toml
atlas-client/cpp/: atlas_env.cpp  atlas_env.h
atlas-client/include/: atlas_client.h
atlas-client/src/: channel.rs  ffi.rs  lib.rs
atlas-client/tests/: e2e.rs
atlas-protocol/: Cargo.toml
atlas-protocol/src/: lib.rs  spsc.rs
atlas-service/: Cargo.toml
atlas-service/benches/: concurrent_bench.rs  e2e_bench.rs  executor_bench.rs
atlas-service/src/: batch.rs  channel.rs  executor.rs  lib.rs  main.rs  pipeline.rs  scheduler.rs  service.rs
atlas-service/tests/: service_stress.rs
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/architecture/: overview.md  protocol.md  shared-memory.md
docs/src/components/: batching.md  client.md  env-shim.md  executor.md  ffi.md  scheduler.md  service.md
docs/src/development/: benchmarking.md  building.md  testing.md
docs/src/usage/: getting-started.md  rocksdb-integration.md  running.md  tuning.md
