[package]
name = "atlas-client"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
atlas-protocol = { path = "../atlas-protocol" }
bytemuck = { version = "1", features = ["derive"] }
nix = { version = "0.29", features = ["mman", "fs"] }

[dev-dependencies]
atlas-service = { path = "../atlas-service" }
libc = "0.2"
nix = { version = "0.29", features = ["mman"] }
tempfile = "3"
